custom label needed

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4201",
+    "start": "ng serve --port 4234",
     "build": "ng build",
     "ng:test": "ng test",
     "lint": "ng lint",
     "test": "jest --watch",
     "test:ci": "jest --runInBand",
     "test:coverage": "jest --coverage",
-    "build:prod": "ng build --prod --base-href https://nileshpatel17.github.io/ng-multiselect-dropdown/",
+    "build:prod": "ng build --prod --base-href https://kubak10.github.io/ng-multiselect-dropdown/",
     "clear:lib": "rimraf dist-lib",
     "postcopyfiles": "copyfiles -u 1 ./dist-lib/**/*.* node_modules/ng-multiselect-dropdown",
     "copyfiles": "mkdir dist-lib/themes && copyfiles ng-multiselect-dropdown.theme.scss dist-lib/themes",
@@ -23,7 +23,7 @@
     "prepublish": "npm run build:prod",
     "publish": "ngh --no-silent false --name=\"nileshpatel17\" --email=\"nilesh.nvs@hotmail.com\"",
     "deploy": "ng build --prod --base-href /ng-multiselect-dropdown/ && npm run deployOnly",
-    "deployOnly": "angular-cli-ghpages --no-silent --repo=https://github.com/NileshPatel17/ng-multiselect-dropdown.git --name=\"Nilesh Patel\" --email=nilesh.nvs@hotmail.com",
+    "deployOnly": "angular-cli-ghpages --no-silent --repo=https://github.com/kubak10/ng-multiselect-dropdown.git",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
